adapt home page

--- a/index.html
+++ b/index.html
@@ -36,18 +36,23 @@
     <section class="featured">
         <div class="container mt-5">
             <div class="row">
-                <div class="col-md-6">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <h2 class="card-title">Buying Checklist</h2>
-                            <p class="card-text">Discover the perfect car with our comprehensive buying checklist.</p>
-                            <a href="https://milos.oroz.space/autocheckpro/basic_checklist.html" class="btn btn-primary">Basic Checklist</a>
-                            <a href="https://milos.oroz.space/autocheckpro/test_drive.html" class="btn btn-primary">Test Drive Checklist</a>
-
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-md-8">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h2 class="card-title text-center">Buying Checklist</h2>
+                                    <p class="card-text text-center">Discover the perfect car with our comprehensive buying checklist.</p>
+                                    <div class="text-center">
+                                        <a href="https://milos.oroz.space/autocheckpro/basic_checklist.html" class="btn btn-primary">Basic Checklist</a>
+                                        <a href="https://milos.oroz.space/autocheckpro/test_drive.html" class="btn btn-primary">Test Drive Checklist</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <!-- <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-body">
                             <h2 class="card-title">Maintenance Guide</h2>
@@ -55,7 +60,7 @@
                             <a href="#" class="btn btn-primary">Explore Maintenance</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <!-- <div class="row">
                 <div class="col-md-6">
@@ -81,44 +86,17 @@
     </section>
     
     <!-- Contact Us Section -->
-    <section class="contact">
+    <!-- <section class="contact">
         <div class="container mt-5 text-center">
             <h2>Contact Us</h2>
             <p>If you have any questions or need assistance, feel free to get in touch with our experts.</p>
             <a href="#" class="btn btn-primary">Get in Touch</a>
         </div>
-    </section>
+    </section> -->
 
 <!-- Footer Section with Blue Background -->
-<footer class="bg-primary text-light mt-5">
+<footer class="mt-5 fixed-bottom">
     <div class="container py-4">
-        <div class="row">
-            <div class="col-md-4">
-                <h5>About Us</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae justo nec mi faucibus euismod.</p>
-            </div>
-            <div class="col-md-4">
-                <h5>Quick Links</h5>
-                <ul class="list-unstyled">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Buying Checklist</a></li>
-                    <li><a href="#">Maintenance Checklist</a></li>
-                    <li><a href="#">Diagnostic Tools</a></li>
-                    <li><a href="#">Car Error Repair</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-            <div class="col-md-4">
-                <h5>Contact Us</h5>
-                <address>
-                    <p>123 Car Street</p>
-                    <p>City, Country</p>
-                    <p>Email: contact@01carhub.com</p>
-                    <p>Phone: +123-456-7890</p>
-                </address>
-            </div>
-        </div>
-        <hr>
         <div class="text-center">
             <p>&copy; 2023 01 Car Hub. All rights reserved.</p>
         </div>
