--- a/navi.html
+++ b/navi.html
@@ -6,18 +6,18 @@
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/index.html">Home</a>
+                    <a class="nav-link" href="/index.html">HOME</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/basic_checklist.html">Basic
-                        Checklist</a>
+                    <a class="nav-link" href="/pages/basic_checklist.html">BASIC
+                        </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/test_drive.html">Test Drive
-                        Checklist</a>
+                    <a class="nav-link" href="/pages/test_drive.html">TEST DRIVE
+                        </a>
                 </li>
 
                 <!--   <li class="nav-item">
