--- a/navi.html
+++ b/navi.html
@@ -1,7 +1,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container">
-        <a class="navbar-brand" href="/index.html">01 Car Hub</a>
+        <a class="navbar-brand" href="https://milos.oroz.space/autocheckpro/">01 Car Hub</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -9,14 +9,14 @@
         <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/index.html">HOME</a>
+                    <a class="nav-link" href="https://milos.oroz.space/autocheckpro/">HOME</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/basic_checklist.html">BASIC
+                    <a class="nav-link" href="https://milos.oroz.space/autocheckpro/basic_checklist.html">BASIC
                         </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/test_drive.html">TEST DRIVE
+                    <a class="nav-link" href="https://milos.oroz.space/autocheckpro/test_drive.html">TEST DRIVE
                         </a>
                 </li>
 
