adapt home page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container text-center mt-5">
             <h1 class="display-4">Drive with Confidence</h1>
             <p class="lead">Your Trusted Car Resource</p>
-            <p>Welcome to 01 Car Hub, where we empower you with knowledge to make informed decisions about your car.</p>
+            <p>Welcome to 01 Car Hub, your trusted source for empowering you with knowledge and helping you make informed decisions about your next car purchase.</p>
         </div>
     </section>
     
@@ -97,10 +97,10 @@
     </section> -->
 
 <!-- Footer Section with Blue Background -->
-<footer>
-    <div class="container py-4">
+<footer class="fixed-bottom bg-light">
+    <div class="container py-0.5">
         <div class="text-center">
-            <p>&copy; 2023 01 Car Hub. All rights reserved.</p>
+            <p><small>&copy; 2023 01 Car Hub. All rights reserved.</small></p>
         </div>
     </div>
 </footer>
