adapt home page

--- a/pages/navi.html
+++ b/pages/navi.html
@@ -9,14 +9,14 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="https://milos.oroz.space/autocheckpro/">HOME</a>
+                    <a class="nav-link" href="../index.html">HOME</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://milos.oroz.space/autocheckpro/pages/basic_checklist.html">BASIC
+                    <a class="nav-link" href="../pages/basic_checklist.html">BASIC
                         </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://milos.oroz.space/autocheckpro/pages/test_drive.html">TEST DRIVE
+                    <a class="nav-link" href="../pages/test_drive.html">TEST DRIVE
                         </a>
                 </li>
 
@@ -36,3 +36,11 @@
         </div>
     </div>
 </nav>
+<script>
+$(function () {
+    $('.nav-link a').click(function () {
+        $('.nav-link a').removeClass('active');
+        $(this).addClass('active');
+    });
+});
+</script>
