adapt home page

--- a/pages/test_drive.html
+++ b/pages/test_drive.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <base href="https://milos.oroz.space/autocheckpro/">
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car Information Checklist</title>
@@ -9,7 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <!-- Custom CSS Styles -->
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 
 
@@ -775,7 +777,8 @@
     </script>
     
 
-    <script src="../js/drive.js"></script>
+    <script src="js/drive.js"></script>
+    <script src="js/common.js"></script>
 
     <!-- Include Bootstrap JavaScript and jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
