--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
     <!DOCTYPE html>
     <html lang="en">
     <head>
+        <base href="https://milos.oroz.space/autocheckpro/">
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Your Car Resource - 01</title>
@@ -43,7 +45,6 @@
                         <div class="col-md-8">
                             <div class="card">
                                 <div class="card-body">
-                                    <h2 class="card-title text-center">Buying Checklist</h2>
                                     <p class="card-text text-center">Discover the perfect car with our comprehensive buying checklist.</p>
                                     <div class="text-center">
                                         <a href="https://milos.oroz.space/autocheckpro/pages/basic_checklist.html" class="btn btn-primary">Basic Checklist</a>
@@ -105,12 +106,16 @@
     </div>
 </footer>
 
+<script src="js/common.js"></script>
+
 <script>
     $(document).ready(function () {
         $("#navbar").load("pages/navi.html");
+        updateHrefAttributes();
+
     });
 </script>
-    
+
     <!-- Add Bootstrap JS CDN (optional) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     
