adapt home page

--- a/pages/navi.html
+++ b/pages/navi.html
@@ -9,14 +9,14 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link dynamic-href" href="index.html">HOME</a>
+                    <a class="nav-link dynamic-href" href="/index.html">HOME</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dynamic-href" href="pages/basic_checklist.html">BASIC
+                    <a class="nav-link dynamic-href" href="/pages/basic_checklist.html">BASIC
                         </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dynamic-href" href="pages/test_drive.html">TEST DRIVE
+                    <a class="nav-link dynamic-href" href="/pages/test_drive.html">TEST DRIVE
                         </a>
                 </li>
 
