--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- Add Bootstrap CSS CDN -->
     
         <!-- Custom CSS Styles -->
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="/css/styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -106,11 +106,11 @@
     </div>
 </footer>
 
-<script src="js/common.js"></script>
+<script src="/js/common.js"></script>
 
 <script>
     $(document).ready(function () {
-        $("#navbar").load("pages/navi.html");
+        $("#navbar").load("/pages/navi.html");
         updateHrefAttributes();
 
     });
