adapt home page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
     <!DOCTYPE html>
     <html lang="en">
     <head>
-        <base href="https://milos.oroz.space/autocheckpro/">
 
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +9,7 @@
         <!-- Add Bootstrap CSS CDN -->
     
         <!-- Custom CSS Styles -->
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="https://milos.oroz.space/autocheckpro/css/styles.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -106,11 +105,11 @@
     </div>
 </footer>
 
-<script src="/js/common.js"></script>
+<script src="https://milos.oroz.space/autocheckpro/js/common.js"></script>
 
 <script>
     $(document).ready(function () {
-        $("#navbar").load("/pages/navi.html");
+        $("#navbar").load("https://milos.oroz.space/autocheckpro/pages/navi.html");
         updateHrefAttributes();
 
     });
