--- a/pages/test_drive.html
+++ b/pages/test_drive.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <base href="https://milos.oroz.space/autocheckpro/">
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,7 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <!-- Custom CSS Styles -->
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="https://milos.oroz.space/autocheckpro/css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 
 
@@ -772,13 +771,13 @@
     </script> -->
     <script>
     $(document).ready(function () {
-            $("#navbar").load("/pages/navi.html");
+            $("#navbar").load("https://milos.oroz.space/autocheckpro/pages/navi.html");
     });
     </script>
     
 
-    <script src="/js/drive.js"></script>
-    <script src="/js/common.js"></script>
+    <script src="https://milos.oroz.space/autocheckpro/js/drive.js"></script>
+    <script src="https://milos.oroz.space/autocheckpro/js/common.js"></script>
 
     <!-- Include Bootstrap JavaScript and jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
