--- a/pages/navi.html
+++ b/pages/navi.html
@@ -7,7 +7,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
+            <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link dynamic-href" href="https://milos.oroz.space/autocheckpro/index.html">HOME</a>
                 </li>
