--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
             <!-- Featured Section on the right -->
             <div class="col-md-6">
                 <section class="featured">
-                    <div class="card">
+                    <div class="">
                         <div class="card-body">
                             <p class="lead">Your Trusted Car Resource</p>
-                            <p>Welcome to 01 Car Hub, your trusted source for empowering you with knowledge and helping you make informed decisions about your next car purchase.</p>
+                            <p>WWelcome to 01 Car Hub, where you'll find checklists to empower you with knowledge and help you make informed decisions about your next car purchase.</p>
                             <div class="text-center">
                                 <a href="https://milos.oroz.space/autocheckpro/pages/basic_checklist.html" class="btn btn-primary">Basic Checklist</a>
                                 <a href="https://milos.oroz.space/autocheckpro/pages/test_drive.html" class="btn btn-primary">Test Drive Checklist</a>
