--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="navbar"></div>
 
     
-    <div class="container mt-5">
+    <div class="container-sm mt-5">
         <div class="row">
             <!-- Hero Section on the left -->
             <div class="col-md-6">
@@ -45,7 +45,7 @@
                     <div class="">
                         <div class="card-body">
                             <p class="lead">Your Trusted Car Resource</p>
-                            <p>WWelcome to 01 Car Hub, where you'll find checklists to empower you with knowledge and help you make informed decisions about your next car purchase.</p>
+                            <p>Welcome to 01 Car Hub, where you'll find checklists to empower you with knowledge and help you make informed decisions about your next car purchase.</p>
                             <div class="text-center">
                                 <a href="https://milos.oroz.space/autocheckpro/pages/basic_checklist.html" class="btn btn-primary">Basic Checklist</a>
                                 <a href="https://milos.oroz.space/autocheckpro/pages/test_drive.html" class="btn btn-primary">Test Drive Checklist</a>
@@ -67,10 +67,10 @@
     </section> -->
 
 <!-- Footer Section with Blue Background -->
-<footer class="fixed-bottom bg-light">
+<footer class="fixed-bottom text-black-50">
     <div class="container py-0.5">
-        <div class="text-center">
-            <p><small>&copy; 2023 01 Car Hub. All rights reserved.</small></p>
+        <div class="text-center small-font-size">
+            <small>&copy; 2023 01 Car Hub. All rights reserved.</small>
         </div>
     </div>
 </footer>
