--- a/pages/navi.html
+++ b/pages/navi.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light sticky-top">
+<nav class="navbar navbar-expand-md navbar-light sticky-top">
     <div class="container">
         <a class="navbar-brand" href="https://milos.oroz.space/autocheckpro/">01 Car Hub</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
