--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <!-- Featured Section on the right -->
              <div class="col-md-6 bg-warning img-right-corner">
-                <img src="/imgs/card.png" class="card-img-top" alt="Your Image">
+                <img src="/imgs/card_min.png" class="card-img-top" alt="Your Image">
               
             </div> 
 
