--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </section> -->
 
 <!-- Footer Section with Blue Background -->
-<footer class="fixed-bottom text-black-50">
+<footer class="fixed-bottom text-black-50 bg-white">
     <div class="container py-0.5">
         <div class="text-center small-font-size">
             <small>&copy; 2023 01 Car Hub. All rights reserved.</small>
