--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <!-- Font Awesome Icons -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
-        <link rel="stylesheet" href="https://https://milos.oroz.space/autocheckpro/css/styles.css">
+        <link rel="stylesheet" href="https://milos.oroz.space/autocheckpro/css/styles.css">
 
     
     </head>
@@ -55,7 +55,7 @@
                 <section class="featured featured-section">
                     <div class="">
                         <div class="card-body">
-                            <p class="lead">Your Trusted Car Resource</p>
+                            <p class="lead">Your Ancient Auto Alchemist :)</p>
                             <p>Welcome to 01 Car Hub, where you'll find checklists to empower you with knowledge and help you make informed decisions about your next car purchase.</p>
                             <div class="text-center">
                                 <a href="https://milos.oroz.space/autocheckpro/pages/basic_checklist.html" class="btn btn-danger">Basic Checklist</a>
@@ -96,7 +96,7 @@
     </div>
 </footer>
 
-<script src="https://https://milos.oroz.space/autocheckpro/js/common.js"></script>
+<script src="https://milos.oroz.space/autocheckpro/js/common.js"></script>
 
 <script>
     $(document).ready(function () {
