--- a/pages/navi.html
+++ b/pages/navi.html
@@ -19,7 +19,9 @@
                     <a class="nav-link dynamic-href" href="https://milos.oroz.space/autocheckpro/pages/test_drive.html">TEST DRIVE
                         </a>
                 </li>
-
+                <li class="nav-item">
+                    <a class="nav-link" href="https://milos.oroz.space/autocheckpro/pages/about.html">CONTACT</a>
+                </li> 
                 <!--   <li class="nav-item">
                     <a class="nav-link" href="#">Maintenance Checklist</a>
                 </li>
@@ -31,7 +33,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
-                </li> -->
+                </li> 
             </ul>
         </div>
     </div>
