--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <!-- Font Awesome Icons -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
-        <link rel="stylesheet" href="https://milos.oroz.space/autocheckpro/css/styles.css">
+        <link rel="stylesheet" href="/css/styles.css">
 
     
     </head>
@@ -96,11 +96,11 @@
     </div>
 </footer>
 
-<script src="https://milos.oroz.space/autocheckpro/js/common.js"></script>
+<script src="/js/common.js"></script>
 
 <script>
     $(document).ready(function () {
-        $("#navbar").load("https://milos.oroz.space/autocheckpro/pages/navi.html");
+        $("#navbar").load("/pages/navi.html");
 
     });
 </script>
