--- a/pages/about.html
+++ b/pages/about.html
@@ -21,7 +21,7 @@
   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Custom CSS Styles -->
-  <link rel="stylesheet" href="https://milos.oroz.space/autocheckpro/css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
 
 </head>
 
@@ -30,8 +30,8 @@
     <div id="navbar"></div>
 
     <div class="container mt-5">
-        <<div class="text-center">
-            <h1 class="display-4">Hey there! Here is your 'Ancient Auto Alchemist.'</h1>
+        <div class="text-center">
+            <h3 class="display-4">Hey there! Here is your 'Ancient Auto Alchemist.'</h3>
             <p>I've put together these checklists to make car buying a whole lot easier.</p>
             <p>They've worked like a charm for me, and I hope they do the same for you!</p>
             <p>Any feedback that could be useful for others? Feel free to share it with me here. 🚗😄</p>
@@ -40,7 +40,7 @@
 
     <script>
         $(document).ready(function () {
-            $("#navbar").load("https://milos.oroz.space/autocheckpro/pages/navi.html");
+            $("#navbar").load("/pages/navi.html");
         });
     </script>
 
