--- a/pages/basic_checklist.html
+++ b/pages/basic_checklist.html
@@ -18,7 +18,7 @@
   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Custom CSS Styles -->
-  <link rel="stylesheet" href="https://milos.oroz.space/autocheckpro/css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
 
 </head>
 
@@ -213,11 +213,11 @@
     </section>
     <script>
         $(document).ready(function () {
-            $("#navbar").load("https://milos.oroz.space/autocheckpro/pages/navi.html");
+            $("#navbar").load("/pages/navi.html");
         });
     </script>
 
-    <script src="https://milos.oroz.space/autocheckpro/js/basic.js"></script>
+    <script src="/js/basic.js"></script>
 
     <!-- Include Bootstrap JavaScript and jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
