--- a/pages/navi.html
+++ b/pages/navi.html
@@ -1,7 +1,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-md navbar-light sticky-top">
     <div class="container">
-        <a class="navbar-brand" href="https://milos.oroz.space/autocheckpro/">01 Car Hub</a>
+        <a class="navbar-brand" href="index.html">01 Car Hub</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -9,18 +9,18 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link dynamic-href" href="https://milos.oroz.space/autocheckpro/index.html">HOME</a>
+                    <a class="nav-link dynamic-href" href="/index.html">HOME</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dynamic-href" href="https://milos.oroz.space/autocheckpro/pages/basic_checklist.html">BASIC
+                    <a class="nav-link dynamic-href" href="/pages/basic_checklist.html">BASIC
                         </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dynamic-href" href="https://milos.oroz.space/autocheckpro/pages/test_drive.html">TEST DRIVE
+                    <a class="nav-link dynamic-href" href="/pages/test_drive.html">TEST DRIVE
                         </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://milos.oroz.space/autocheckpro/pages/about.html">CONTACT</a>
+                    <a class="nav-link" href="/pages/about.html">CONTACT</a>
                 </li> 
                 <!--   <li class="nav-item">
                     <a class="nav-link" href="#">Maintenance Checklist</a>
