--- a/pages/about.html
+++ b/pages/about.html
@@ -8,15 +8,13 @@
     
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HVQPSX94JX"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-HVQPSX94JX');
-    </script>
+   <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-5V8Q27QN');</script>
+    <!-- End Google Tag Manager -->
     <title>Car Information Checklist</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
     <script src="https://unpkg.com/html2canvas@1.0.0-rc.1/dist/html2canvas.js"></script>
@@ -35,12 +33,16 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5V8Q27QN"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <!-- Navbar -->
     <div id="navbar"></div>
 
     <div class="container mt-5">
         <div class="text-center">
-            <h3 class="display-4">Hey there! Here is your 'Ancient Auto Alchemist.'</h3>
+            <h3 class="display-4">Hey there!'</h3>
             <p>I've put together these checklists to make car buying a whole lot easier.</p>
             <p>They've worked like a charm for me, and I hope they do the same for you!</p>
             <p>Any feedback that could be useful for others? Feel free to share it with me here. 🚗😄</p>
