--- a/pages/about.html
+++ b/pages/about.html
@@ -17,7 +17,7 @@
 
     gtag('config', 'G-HVQPSX94JX');
     </script>
-    <title>Car Information Checklist</title>
+    <title>About us</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.6/purify.min.js"></script>
     <script src="https://unpkg.com/html2canvas@1.0.0-rc.1/dist/html2canvas.js"></script>
 
