--- a/pages/test_drive.html
+++ b/pages/test_drive.html
@@ -118,7 +118,7 @@
         </div>
 
         <!-- Vin Check Links -->
-        <div class="mb-3">
+        <!-- <div class="mb-3">
             <label class="form-label">Vin Check:</label>
             <p>
                 <a href="https://vinrcl.safercar.gov/vin/" target="_blank">VIN Check (Safercar.gov)</a>
@@ -127,7 +127,7 @@
                 <a href="https://www.nicb.org/theft_and_fraud_awareness/vincheck" target="_blank">VIN Check
                     (NICB)</a>
             </p>
-        </div>
+        </div> -->
         <!-- Engine Starting Instructions -->
         <div class="mb-3">
             <label class="form-label">Engine (start cold, let warm up, go for a ride)</label>
