--- a/pages/test_drive.html
+++ b/pages/test_drive.html
@@ -129,10 +129,8 @@
             </p>
         </div> -->
         <!-- Engine Starting Instructions -->
-        <div class="mb-3">
-            <label class="form-label">Engine (start cold, let warm up, go for a ride)</label>
-        </div>
 
+    <h2>Engine (start cold, let warm up, go for a ride)</h2>
         <!-- Additional Checklist Items - Before Startup -->
         <h2>Before Startup</h2>
 
