--- a/pages/navi.html
+++ b/pages/navi.html
@@ -9,23 +9,24 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link dynamic-href" href="/index.html">HOME</a>
+                    <a class="nav-link dynamic-href" href="/index.html" data-i18n="nav.home">HOME</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dynamic-href" href="/pages/basic_checklist.html">BASIC
+                    <a class="nav-link dynamic-href" href="/pages/basic_checklist.html" data-i18n="nav.basic">BASIC
                         </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link dynamic-href" href="/pages/test_drive.html">TEST DRIVE
+                    <a class="nav-link dynamic-href" href="/pages/test_drive.html" data-i18n="nav.drive">TEST DRIVE
                         </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/about.html">CONTACT</a>
+                    <a class="nav-link" href="/pages/about.html" data-i18n="nav.contact">CONTACT</a>
                 </li> 
-                <!--   <li class="nav-item">
-                    <a class="nav-link" href="#">Maintenance Checklist</a>
-                </li>
+       
                 <li class="nav-item">
+                    <a class="nav-link" id="languageSwitch" href="#">en</a>
+                </li>
+                <!-- <li class="nav-item">
                     <a class="nav-link" href="#">Diagnostic Tools</a>
                 </li>
                 <li class="nav-item">
