add jsut de and en

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -31,11 +31,44 @@
     <!-- Navbar -->
     <div id="navbar"></div>
 
-    <div class="container text-center mt-5">
-        <!-- Apply Bootstrap classes to the "Coming Soon" container -->
-        <div class="jumbotron">
-            <h2 class="display-4">Coming Soon</h2>
+    <div class="container mt-5">
+        <h1>Inspection Checklist Wiki</h1>
+        <ul>
+            <li><a href="#scratches">Scratches and Dents</a></li>
+            <li><a href="#dents">Dents</a></li>
+            <li><a href="#windshield">Windshield (chips or cracks?)</a></li>
+            <li><a href="#headlights">Headlights (foggy?)</a></li>
+            <li><a href="#inspection-sticker">Inspection Sticker Current?</a></li>
+            <li><a href="#rusty-brake-rotors">Rusty Brake Rotors</a></li>
+        </ul>
+
+
+
+        <div id="scratches-dents">
+            <h2>Scratches and Dents</h2>
+<div>When conducting a car inspection, it's crucial not to assess the vehicle when it's wet, as it can conceal certain imperfections. Additionally, be sure to check for holes and dents, as these issues can have a significant impact on the car's value and should be considered during negotiations. Moreover, it's important to avoid underestimating the difficulty and cost of fixing scratches, especially when dealing with special paint colors that may not be readily available for new cars. Highlighting these factors can make strong points for negotiation when buying or selling a vehicle.</div>        </div>
+
+        <div id="windshield">
+            <h2>Windshield (chips or cracks?)</h2>
+            <div>During a thorough vehicle inspection, it is essential to check the condition of the glass surfaces, specifically for any chips or cracks. These imperfections not only compromise the aesthetics of the vehicle but also pose a safety risk.</div>
         </div>
+
+        <div id="headlights">
+            <h2>Headlights (foggy?)</h2>
+            <div>Checking the condition of the headlights is a critical part of a vehicle inspection. One aspect to consider is whether the headlights appear foggy or hazy, which can be caused by oxidation and significantly affect their effectiveness and the overall aesthetics of the car. Restoring or replacing them can become a costly necessity, emphasizing the importance of this consideration during a vehicle assessment.</div>
+        </div>
+
+        <div id="inspection-sticker">
+            <h2>Inspection Sticker Current?</h2>
+<div>
+    Confirm the validity of the inspection sticker. Many regions implement a grace period, such as a six-month tolerance limit, allowing for flexibility beyond the stated expiration date.
+</div>        </div>
+
+        <div id="rusty-brake-rotors">
+            <h2>Rusty Brake Rotors</h2>
+<div>
+    Rusty brake rotors can serve as an indicator that a car may have been stationary for an extended period. This could signify potential issues or that the seller is eager to part with the vehicle, possibly at a reduced price. Evaluating the condition of the brake rotors can provide insights into the car's recent activity and potential negotiation leverage for the buyer.
+</div>        </div>
     </div>
 
     <script>
