add jsut de and en

--- a/pages/about.html
+++ b/pages/about.html
@@ -40,10 +40,10 @@
 
     <div class="container mt-5">
         <div class="text-center">
-            <h3 class="display-4">Hey there!</h3>
-            <p>I've put together these checklists to make car buying a whole lot easier.</p>
-            <p>They've worked like a charm for me, and I hope they do the same for you!</p>
-            <p>Any feedback that could be useful for others? Feel free to share it with me here. 🚗😄</p>
+            <h3 class="display-4" data-i18n="about.hi">Hey there!</h3>
+            <p data-i18n="about.p1">I've put together these checklists to make car buying a whole lot easier.</p>
+            <p data-i18n="about.p2">They've worked like a charm for me, and I hope they do the same for you!</p>
+            <p data-i18n="about.p3">Any feedback that could be useful for others? Feel free to share it with me here. 🚗😄</p>
         </div>
     </div>
 
